--- a/css/styles.css
+++ b/css/styles.css
@@ -1,23 +1,36 @@
 body {
-  background-color: rgb(44, 44, 44);
+  background-color: rgb(35, 58, 100);
+  margin: 0;
 }
 
 h4,
 h5,
 p {
   font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
-  font-size: 30px;
+  font-size: 50px;
   text-align: center;
-  color: #fff;
+  color: black;
+  display: block;
+  background: rgb(2, 0, 36);
+  background: linear-gradient(
+    90deg,
+    rgba(2, 0, 36, 0) 0%,
+    rgba(255, 255, 255, 1) 50%,
+    rgba(0, 212, 255, 0) 100%
+  );
 }
 
-h5,
-p {
-  color: black;
+h4 {
+  padding: 1rem;
+}
+
+h5 {
+  border-bottom: 3px solid black;
   font-size: 25px;
 }
 
 p {
+  color: black;
   font-size: 18px;
 }
 
@@ -29,10 +42,21 @@ p {
 
 .game {
   text-align: center;
-  background-color: rgb(240, 235, 229);
   width: 500px;
-  border: 2px solid black;
   border-radius: 10px;
   padding: 1rem;
   margin: 1rem;
+  background-size: cover;
+}
+
+.error p {
+  font-size: 30px;
+  background-color: #fff;
+  padding: 5px 30px;
+  border-radius: 20px;
+}
+
+.game:hover {
+  opacity: 80%;
+  box-shadow: 5px 5px 5px grey;
 }
