--- a/css/animations/loading-animation.css
+++ b/css/animations/loading-animation.css
@@ -1,3 +1,6 @@
+/* Loading animation */
+/* Imported from https://loading.io/css/ */
+
 .lds-roller {
   display: inline-block;
   position: relative;
