--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,7 @@
 body {
-  background-color: rgb(35, 58, 100);
+  background: #ff5f6d;
+  background: -webkit-linear-gradient(to bottom, #ffc371, #ff5f6d);
+  background: linear-gradient(to bottom, #ffc371, #ff5f6d);
   margin: 0;
 }
 
@@ -9,29 +11,38 @@ p {
   font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
   font-size: 50px;
   text-align: center;
-  color: black;
+  color: rgb(39, 39, 39);
   display: block;
+}
+
+h4,
+h5 {
+  padding: 1rem;
   background: rgb(2, 0, 36);
   background: linear-gradient(
     90deg,
-    rgba(2, 0, 36, 0) 0%,
-    rgba(255, 255, 255, 1) 50%,
-    rgba(0, 212, 255, 0) 100%
+    rgba(255, 255, 255, 0) 0%,
+    rgba(255, 255, 255, 1) 25%,
+    rgba(255, 255, 255, 1) 75%,
+    rgba(255, 255, 255, 0) 100%
   );
 }
 
-h4 {
-  padding: 1rem;
-}
-
 h5 {
-  border-bottom: 3px solid black;
+  padding: 0;
+  margin: 1rem;
+  border-bottom: 1px solid black;
   font-size: 25px;
 }
 
 p {
   color: black;
   font-size: 18px;
+}
+
+.header-container {
+  background-color: #fff;
+  box-shadow: 0 0 30px 2px rgb(71, 71, 71);
 }
 
 .container {
@@ -43,10 +54,13 @@ p {
 .game {
   text-align: center;
   width: 500px;
+  max-width: 100%;
   border-radius: 10px;
   padding: 1rem;
-  margin: 1rem;
+  margin: 1.5rem;
   background-size: cover;
+  background-position: center;
+  box-shadow: 0 0 30px 2px rgb(71, 71, 71);
 }
 
 .error p {
@@ -56,7 +70,21 @@ p {
   border-radius: 20px;
 }
 
+.content {
+  background-color: #ffffff;
+  opacity: 1;
+  background-image: repeating-radial-gradient(
+      circle at 0 0,
+      transparent 0,
+      #ffffff 4px
+    ),
+    repeating-linear-gradient(#fff2e755, #fff2e7);
+  padding: 0.5rem;
+  border-top: 1px solid black;
+  border-bottom: 1px solid black;
+  border-radius: 5px;
+}
+
 .game:hover {
   opacity: 80%;
-  box-shadow: 5px 5px 5px grey;
 }
